--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuedraggable": "^4.0.1"
+    "vuedraggable": "^4.0.1",
+    "wheel-indicator": "^1.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
