--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "emoji-regex": "^9.2.2",
     "maska": "^1.4.1",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
