--- a/apache/apache2.conf
+++ b/apache/apache2.conf
@@ -158,18 +158,19 @@ Include ports.conf
 # your system is serving content from a sub-directory in /srv you must allow
 # access here, or in any related virtual host.
 <Directory />
-	Options FollowSymLinks
+	Options -Indexes
 	AllowOverride None
 	Require all denied
 </Directory>
 
 <Directory /usr/share>
+	Options -Indexes
 	AllowOverride None
 	Require all granted
 </Directory>
 
 <Directory /var/www/>
-	Options Indexes FollowSymLinks
+	Options -Indexes
 	AllowOverride All
 	Require all granted
 </Directory>
