fix: bug fixes! fix: network null, fix: hide userbar by click ouside, fix: user-info icon and username restyled, feat: modal-create-chat upload base file, feat: loader by upload modal-create-chat base file, fix: modal-choice-activation-method-success hide modal after add whatsapp acc, fix: modal-create-instagram-success hide modal after add inst acc, feat: autoresponder in progress, feat: registration email, phone, checkbox

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,5 +7,6 @@ services:
             args: 
                 - VUE_APP_API_URL=https://example.com
                 - VUE_APP_SOCKET_URL=wss://example.com:3000
+                - VUE_APP_AMOCRM_ID=adb03ea5-c2be-4347-9915-6118fa70e5a4
         network_mode: host
         restart: always
