--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mxgraph": "^4.2.2",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-facebook-login-component-next": "^1.0.4",
     "vue-router": "^4.0.0-0",
     "vuedraggable": "^4.0.1",
     "wheel-indicator": "^1.3.0"
