--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.0.0",
     "vue-facebook-login-component-next": "^1.0.4",
     "vue-router": "^4.0.0-0",
+    "vue3-slide-up-down": "^1.2.5",
     "vuedraggable": "^4.0.1",
     "wheel-indicator": "^1.3.0"
   },
