--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "maska": "^1.4.1",
     "mxgraph": "^4.2.2",
     "register-service-worker": "^1.7.1",
+    "swiper": "^6.8.4",
     "vue": "^3.0.0",
     "vue-facebook-login-component-next": "^1.0.4",
     "vue-router": "^4.0.0-0",
